@@ -47,6 +47,10 @@ CHANGES
     - Fixed bug with union() when applied to non-Table connected
       select statements
 
+    - improved behavior of text() expressions when used as 
+      FROM clauses, such as select().select_from(text("sometext"))
+      [ticket:1014]
+      
 - engines
     - Pool listeners can now be provided as a dictionary of
       callables or a (possibly partial) duck-type of
